backend/dev-start.err
PATCH /supervisor/affectations/:id/cancel error: ReferenceError: result is not defined
    at cancelAffectation (C:\Users\Hakim\Downloads\pfe-main\backend\src\controllers\supervisor.controller.js:969:46)
C:\Users\Hakim\Downloads\pfe-main\backend\src\controllers\subject.controller.js:252
<<<<<<< HEAD
^^

SyntaxError: Unexpected token '<<'
    at wrapSafe (node:internal/modules/cjs/loader:1763:18)
    at Module._compile (node:internal/modules/cjs/loader:1804:20)
    at Object..js (node:internal/modules/cjs/loader:1961:10)
    at Module.load (node:internal/modules/cjs/loader:1553:32)
    at Module._load (node:internal/modules/cjs/loader:1355:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1576:12)
    at require (node:internal/modules/helpers:153:16)
    at Object.<anonymous> (C:\Users\Hakim\Downloads\pfe-main\backend\src\routes\subject.routes.js:16:5)
    at Module._compile (node:internal/modules/cjs/loader:1830:14)
    at Object..js (node:internal/modules/cjs/loader:1961:10)
    at Module.load (node:internal/modules/cjs/loader:1553:32)
    at Module._load (node:internal/modules/cjs/loader:1355:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1576:12)
    at require (node:internal/modules/helpers:153:16)

Node.js v24.15.0
